# test_repo

./: .coverage  .flake8  .gitignore  coverage.xml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: webapp.yml
src/jynx_ui/: __main__.py  application.py  chat_list.json  config.py  routes.py
src/jynx_ui/history/: chat_1.json  chat_17.json  chat_18.json  chat_19.json  chat_2.json  chat_20.json  chat_5.json  test_chat.json
src/jynx_ui/templates/: index.html
tests/: test_try.py
webapp/: __main__.py  application.py  chat_list.json  routes.py
webapp/history/: chat_1.json
webapp/templates/: index.html
