[metadata]
name = jynx_ui
description = Jynx is a Flask webapp that acts as UI server
author = Ashish V Nair
license = MIT
license_file = LICENSE
platform = linux
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    jynx_ui
install_requires = 
    requests>=2.0
python_requires = >=3.10
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=8.0
    pytest-cov>=4.1
    mypy>=1.8
    flake8>=7.0
    tox>=4.13


[options.package_data]
jynx_ui = py.typed

[flake8]
max-line-length = 160
exclude = .git, __pycache__, .venv, env, build, jynx_ui.egg-info, README.md, .gitignore, .github, LICENSE, src/jynx_ui/application.py
    
